# SensorX

./: .gitignore  CMakeLists.txt  CODE_STATISTICS.md  README.md  WIFI_INTEGRATION_PROTOTYPE.md  WIRING_GUIDE.md  sdkconfig
components/sensor_system/: CMakeCache.txt  CMakeLists.txt  idf_component.yml
components/sensor_system/include/: config.h  error_recovery.h  i2c_adc_manager.h  i2c_env_manager.h  i2c_gpio_manager.h  i2c_manager.h  mqtt_manager.h  mqtt_publisher.h  onewire_temp_manager.h  pcnt_flow_manager.h  pins.h  sensor.h  sensor_acquisition.h  sensor_coordination.h  system_init.h  types.h  watchdog.h  wifi_manager.h
components/sensor_system/src/: error_recovery.c  i2c_adc_manager.cpp  i2c_env_manager.c  i2c_gpio_manager.c  i2c_manager.c  mqtt_manager.c  mqtt_publisher.c  onewire_temp_manager.c  pcnt_flow_manager.c  sensor.c  sensor_acquisition.c  sensor_coordination.c  system_init.c  watchdog.c  wifi_manager.c
main/: CMakeCache.txt  CMakeLists.txt  idf_component.yml  main.c
notes/: DOCUMENTATION_UPDATES_REQUIRED.md  ESP32_Implementation_Plan.md  ESP32_Migration_Design.md  ESPNano-datasheet.txt  FUTURE_UPGRADES.md  ~$PNano-datasheet.txt
notes/Design Notes/: BOOT_BUTTON_TASK_MONITOR_DESIGN.md  FAN_CONTROL_PLAN.md  GENERICSENS_INTERFACE_SPECIFICATION.md  GenericSensor.ino  IMPLEMENTATION_STRATEGY.md  INTEGRATION_GUIDE.md  MQTT_PUBLISHING_STRATEGY.md  ONEWIRE_SETUP_GUIDE.md  ONEWIRE_TEMP_MANAGER_DESIGN.md  OTA_IMPLEMENTATION_GUIDE.md  PCNT_FLOW_MANAGER_DESIGN.md  SENSOR_MANAGER_ARCHITECTURE.md  SYSTEM_MONITOR_OUTPUT_EXAMPLES.md
