# Component CMakeLists.txt for sensor_system
idf_component_register(SRCS "src/system_init.c"
                            "src/watchdog.c"
                            "src/error_recovery.c"
                            "src/wifi_manager.c"
                            "src/i2c_manager.c"
                            "src/mqtt_manager.c"
                            "src/sensor_acquisition.c"
                            "src/mqtt_publisher.c"
                            "src/sensor.c"
                            "src/sensor_coordination.c"
                            "src/onewire_temp_manager.c"
                            "src/pcnt_flow_manager.c"
                            "src/i2c_adc_manager.cpp"
                            "src/i2c_gpio_manager.c"
                       INCLUDE_DIRS "include"
                       REQUIRES esp_hw_support driver esp_netif esp_event esp_wifi nvs_flash mqtt json onewire_bus espp__ads1x15)
